--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.0",
+    "@types/pg": "^8.15.4",
     "axios": "^1.11.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
